Fixing a bug which meant the pong game in the footer was too tall

--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -320,9 +320,9 @@ footer{
     z-index: 999;
     display: flex;
     justify-content: center;
-    align-items: center;
     /* margin-left: 200px; */
     position: relative;
+    margin-top: 48px;
 }
 
 .footer h1{
